History of this buildout
========================

4.5 (unreleased)
----------------

- Nothing changed yet.


4.4 (2012-01-23)
----------------

- Add conf option varnish_host in buildout to set on which ip or host
  varnish listens.
  [maurits]

- Do not fail in the main template when there is not show_linkedin
  property.
  [maurits]


4.3 (2012-01-20)
----------------

- Merged 3.30-3.44 changes.
  [maurits]


4.2 (2011-11-17)
----------------

- Fixed AttributeError when deleting a normal file from a meeting.
  Normal files do not have a contains_pdf method.
  [maurits]


4.1 (2011-10-27)
----------------

- Use plone.recipe.plone 3.1.7-zest-1 that knows where to get
  ZopeVersionControl-0.3.4.tar.gz.  If you get "Error: Not a
  recognized archive type" when running bin/buildout then remove that
  old ZopeVersionControl tarball and try again.
  [maurits]

- Fixed Unauthorized error when displaying a list of relatedDocuments
  that the user does not have access to.  (Merged from maintenance branch.)
  [maurits]


4.0 (2011-10-21)
----------------

- Removed bin/backup as this is not useful for RelStorage.
  [maurits]

- Restructure buildout configs to match the setup of LNE and use
  RelStorage.  No more zeoserver and zeoclient.
  [maurits]


3.44 (2012-01-20)
-----------------

- Newer supervisor, using unix socket.
  [maurits]


3.43 (2012-01-20)
-----------------

- Add buildout config option varnish_purge_hosts.
  [maurits]


3.42 (2012-01-02)
-----------------

- Slightly better css for selects in the year dropdown.
  [maurits]


3.41 (2012-01-02)
-----------------

- Also show a meeting in the digibib overview when its start date is in
  the past but it erroneously still is in the planned state.
  [maurits]

- Fixed displaying year dropdowns in Digibib when the current year has
  no entries.
  [maurits]


3.40 (2011-12-13)
-----------------

- Use collective.emaillogin 1.1 with fix for change password form.
  [maurits]


3.39 (2011-12-11)