@@ -54,10 +54,11 @@ minaraad-log-path = ${buildout:directory}/var/log
 varnish_purge_hosts =
     "127.0.0.1";
 
-# IP or hostname that varnish listens on.  In Belgium this should be
-# the public interface, because the loadbalancer is on a separate
-# machine.
-varnish_host = 127.0.0.1
+# IP or hostname that varnish listens on.  Usually, 127.0.0.1 is
+# enough, but in Belgium this should include the public interface,
+# because the loadbalancer is on a separate machine and varnish should
+# accept connections there.  But '*' works for that.
+varnish_host = *
 
 
 [plone]
